Kill.Entities に BoundingBox を渡す